--- a/Graphics/CMakeLists.txt
+++ b/Graphics/CMakeLists.txt
@@ -3,14 +3,16 @@ INCLUDE(${PROJECT_SOURCE_DIR}/cmake/Common.cmake)
 SET(GraphicsSources
     src/BasicRenderer.cpp
     src/RenderDevice.cpp
+    src/ShaderReflection.cpp
 )
 
 ADD_LIBRARY(
         EffieGraphics ${EFFIE_LIB_TYPE} ${GraphicsSources}
 )
 
-TARGET_INCLUDE_DEFAULT_DIRECTORIES(EffieGraphics)
 
+TARGET_INCLUDE_DEFAULT_DIRECTORIES(EffieGraphics)
+TARGET_INCLUDE_DIRECTORIES(EffieGraphics PUBLIC ${PROJECT_SOURCE_DIR}/external/dawn)
 TARGET_LINK_LIBRARIES(
     EffieGraphics
     PUBLIC
@@ -23,3 +25,7 @@ TARGET_LINK_LIBRARIES(
     dawn_utils
     dawn_sample_utils
 )
+
+#Re-enable once Dawn supports install targets
+#ADD_DEPENDENCIES(EffieGraphics EffieCommon)
+#INSTALL_TARGET(EffieGraphics)
